<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.pucrs.dynamprog</groupId>
	<artifactId>DynamicProg</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

  <url>http://maven.apache.org</url>

  <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.17</maven.compiler.target>
        <maven.compiler.source>1.17</maven.compiler.source>
        <junit.jupiter.version>5.4.2</junit.jupiter.version>
  </properties>
  
  <dependencies>
        <dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<systemPath>/mnt/c/Users/mcmor/Dropbox/M/WSGitLocalNew/MavenRep/utiltimecounter.jar</systemPath>
			<groupId>br.pucrs</groupId>
			<artifactId>util</artifactId>
			<version>1.0</version>
			<scope>system</scope>
		</dependency>
		<dependency>
			<systemPath>/mnt/c/Users/mcmor/Dropbox/M/WSGitLocalNew/MavenRep/Algorithms_Sort.jar</systemPath>
			<groupId>br.pucrs</groupId>
			<artifactId>sorts</artifactId>
			<version>1.0</version>
			<scope>system</scope>
		</dependency>
  </dependencies>
  
  <build>
        <plugins>
            <plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-compiler-plugin</artifactId>
    			<version>3.8.0</version>
    			<configuration>
       		 		<release>17</release>
					<compilerArgs>--enable-preview</compilerArgs>
    			</configuration>
				
			</plugin>
            <plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.codehaus.mojo</groupId>
		        <artifactId>exec-maven-plugin</artifactId>
		        <configuration>
		             <mainClass>br.pucrs.progdinam.AppEdDistance</mainClass>
		        </configuration>
	        </plugin>
        </plugins>
    </build>
  
  <name>Dynamic Programming Implementations</name>
</project>
